--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "35.0.0",
+    "mobx": "^5.13.1",
+    "mobx-react": "^6.1.3",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "0.11.7"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "babel-preset-expo": "7.0.0"
   },
   "private": true
